--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "screenfull": "^5.0.2",
     "view-design": "^4.1.3",
     "vue": "^2.6.11",
     "vue-awesome": "^4.0.2",
